--- a/index.html
+++ b/index.html
@@ -36,3 +36,38 @@
             </div>
         </div>
     </div>
+    <div class="container1">
+        <div class="project">
+            <div class="title1">
+                <div class="projects">
+                    <div class="image"><img src="img/decor-heading.png" alt="" class="image"></div>
+                    <h2 class="title2">Наши проекты</h2>
+                </div>
+                <div class="buttons">
+                    <button class="projects__button button1"><img src="img/Group 2.png" alt=""></button>
+                    <button class="projects__button"><img src="img/Group 1.png" alt=""></button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card"><a href="#"><img src="img/Rectangle 4.png" alt="" class="card__img"></a>
+                    <div class="card__text1">
+                        <h4 class="title3">
+                            ССК “ОЛИМП”
+                        </h4>
+                        <p class="card__text2">
+                            Световое оформление форума “Шубы-2019”
+                        </p>
+                    </div>
+                </div>
+                <div class="card"><a href="#"><img src="img/Rectangle 4 (1).png" alt="" class="card__img"></a>
+                    <div class="card__text1">
+                        <h4 class="title3">
+                            ССК “ОЛИМП”
+                        </h4>
+                        <p class="card__text2">
+                            Световое оформление форума “Шубы-2019”
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
