--- a/index.html
+++ b/index.html
@@ -71,3 +71,40 @@
                 </div>
             </div>
         </div>
+        <div class="catalog">
+            <div class="title4 projects">
+                <div class="decor__img"><img src="img/decor-heading.png" alt="" class="image"></div>
+                <h2 class="title2">Каталог продукции</h2>
+            </div>
+            <ul class="catalog__nav">
+                <li class="catalog__item"><a href="#" class="catalog__link">ROBE</a></li>
+                <li class="catalog__item"><a href="#" class="catalog__link">COMPULITE</a></li>
+            </ul>
+            <div class="catalog__product">
+                <div class="product">
+                    <img src="img/catalog1 (1).png" alt="" class="product__img">
+                    <a href="#" class="desc__product">
+                        <h4 class="text__product">
+                            Статичные светодиодные приборы
+                        </h4>
+                    </a>
+                </div>
+                <div class="product">
+                    <img src="img/catalog1 (2).png" alt="" class="product__img">
+                    <a href="#" class="desc__product">
+                        <h4 class="text__product">
+                            Контроллеры
+                        </h4>
+                    </a>
+                </div>
+                <div class="product">
+                    <img src="img/catalog1 (3).png" alt="" class="product__img">
+                    <a href="#" class="desc__product">
+                        <h4 class="text__product">
+                            Аксессуары
+                        </h4>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
