--- a/index.html
+++ b/index.html
@@ -107,4 +107,37 @@
                 </div>
             </div>
         </div>
-        
+        <div class="rent">
+            <div class="title5 projects">
+                <div class="decor__img"><img src="img/decor-heading.png" alt="" class="image"></div>
+                <h2 class="title2">Аренда оборудования</h2>
+            </div>
+            <div class="rent__content">
+                <div class="desc__rent">
+                    <p class="text__rent">
+                        Мы занимаемся прокатом светового и сценического оборудования ведущих мировых производителей, таких как Robe, SGM, StudioDue, ChainMaster, Milos, Universal Effects, ArtLighting, MobilTech, Lampo, Martin, Spotlight, Compulite, Eurolite и др.
+                    </p>
+                </div>
+                <div class="rent__equipment">
+                    <div class="title6">
+                        <h4 class="rent-title">Новое оборудование, предоставляемое в аренду:</h4>
+                        <div class="buttons">
+                            <button class="projects__button button1"><img src="img/Group 2.png" alt=""></button>
+                            <button class="projects__button"><img src="img/Group 1.png" alt=""></button>
+                        </div>  
+                    </div>
+                    <div class="equipment__content">
+                        <div class="equipment__wrapper"><img src="img/Rectangle.png" alt="" class="equipment__img"></div>
+                        <div class="equipment__desc">
+                            <a href="#" class="equipment__title">Robe Robin ParFect 100</a>
+                            <ul class="equipment__list">
+                                <li class="equipment__item">Источник света 12 светодиодов RGBW по 15 Вт каждый</li>
+                                <li class="equipment__item">Угол раскрытия 7°</li>
+                                <li class="equipment__item">В комплекте рассеивающая линза 40°</li>
+                                <li class="equipment__item">Потребляемая мощность 200 Вт</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
