--- a/index.html
+++ b/index.html
@@ -141,3 +141,47 @@
                 </div>
             </div>
         </div>
+        <div class="news">
+            <div class="title6 projects">
+                <div class="news__left projects">
+                    <div class="decor__img"><img src="img/decor-heading.png" alt="" class="image"></div>
+                    <h2 class="title2">Новости</h2>
+                </div>
+                <div class="buttons">
+                    <button class="news__button news__text">ВСЕ НОВОСТИ</button>
+                </div>
+
+            </div>
+            <div class="news__cards">
+                <div class="news__card-big">
+                    <img class="img-a" src="img/news.png" alt="big card img-a">
+                    <div class="big-card-info">
+                        <div>
+                            <a href="#"><h3>Семинар Milos</h3></a>
+                            <p>27.01.2019</p>
+                        </div>
+                        <p>Наши сотрудники прошли последний семинар от компании Milos.</p>
+                        <p>Они получили новый объем знаний, который позволит нашей компании заниматься
+                            оборудованием не только мероприятий, но производственных помещений.</p>
+                        <a class="news__read" href="#">Читать полностью...</a>
+                    </div>
+                </div>
+                <div class="news__card-little">
+                    <a href="#"><h3>Выставка Prolight+Sound NAMM Russia 2016</h3></a>
+                    <p>30 контрактов, тысячи восторженных посетителей...</p>
+                    <div>
+                        <img src="img/news1m.png" alt="little card" class="little-card-img img-a">
+                        <p>27.01.2019</p>
+                    </div>
+                </div>
+                <div class="news__card-little">
+                    <a href=""><h3>Семинар Robe</h3></a>
+                    <p>30 января 2017 года наши сотрудники побывали в Берлине...</p>
+                    <div>
+                        <img src="img/news2m.png" alt="little card" class="little-card-img">
+                        <p>27.01.2019</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
